@@ -1,0 +1,28 @@
+<!--//$Id$  -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+  <title>DDS4CCM Tutorial Shapes - Coding guidelines</title>
+</head>
+
+<body>
+  <table width="100%" border="0">
+    <tr>
+      <td align="left"><a href="./dds4ccm.html">Previous<a></td>
+      <td align="center"><img width="4%" height="5%" src="./images/images.png"/></td>
+      <td align="right"><a href="./compilation.html"><a></td>
+    </tr>
+  </table>
+  <hr />
+
+  <h1>Coding guidelines</h1>
+
+  <hr />
+  <table width="100%" border="0">
+    <tr>
+      <td align="left"><a href="./dds4ccm.html">Previous<a></td>
+      <td align="center"><img width="4%" height="5%" src="./images/images.png"/></td>
+      <td align="right"><a href="./compilation.html"><a></td>
+    </tr>
+  </table>
+</body>
